crates/happyterminals-backend-ratatui/tests/snapshots/color_snapshots__bunny_ansi16.snap
---
source: crates/happyterminals-backend-ratatui/tests/color_snapshots.rs
assertion_line: 166
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 12 },
    content: [
        "                                        ",
        "                   #$#*$                ",
        "                 +==$$$                 ",
        "             !@#==+                     ",
        "             =@@$$#=+                   ",
        "               ###+=##$#=               ",
        "               ;=*+=#$@@##!             ",
        "                 =$$=@@@$=!             ",
        "                #+=#####=*              ",
        "                  =+***+=$#             ",
        "                                        ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 9, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 9, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
