crates/happyterminals-backend-ratatui/tests/snapshots/color_snapshots__bunny_palette256.snap
---
source: crates/happyterminals-backend-ratatui/tests/color_snapshots.rs
assertion_line: 159
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 12 },
    content: [
        "                                        ",
        "                   #$#*$                ",
        "                 +==$$$                 ",
        "             !@#==+                     ",
        "             =@@$$#=+                   ",
        "               ###+=##$#=               ",
        "               ;=*+=#$@@##!             ",
        "                 =$$=@@@$=!             ",
        "                #+=#####=*              ",
        "                  =+***+=$#             ",
        "                                        ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Indexed(3), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 1, fg: Indexed(94), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Indexed(64), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Indexed(3), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Indexed(94), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Indexed(71), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Indexed(65), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 3, fg: Indexed(101), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Indexed(71), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Indexed(65), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 4, fg: Indexed(101), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Indexed(71), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Indexed(65), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 5, fg: Indexed(95), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 5, fg: Indexed(131), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Indexed(72), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Indexed(66), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 6, fg: Indexed(96), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 6, fg: Indexed(132), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Indexed(67), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Indexed(103), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 7, fg: Indexed(97), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 7, fg: Indexed(133), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Indexed(67), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 8, fg: Indexed(103), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 8, fg: Indexed(97), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 8, fg: Indexed(133), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 9, fg: Indexed(104), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 9, fg: Indexed(98), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 9, fg: Indexed(134), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
