crates/happyterminals-backend-ratatui/tests/snapshots/color_snapshots__bunny_truecolor.snap
---
source: crates/happyterminals-backend-ratatui/tests/color_snapshots.rs
assertion_line: 152
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 12 },
    content: [
        "                                        ",
        "                   #$#*$                ",
        "                 +==$$$                 ",
        "             !@#==+                     ",
        "             =@@$$#=+                   ",
        "               ###+=##$#=               ",
        "               ;=*+=#$@@##!             ",
        "                 =$$=@@@$=!             ",
        "                #+=#####=*              ",
        "                  =+***+=$#             ",
        "                                        ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Rgb(124, 130, 23), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 1, fg: Rgb(130, 124, 23), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 1, fg: Rgb(137, 117, 23), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 1, fg: Rgb(143, 111, 23), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 1, fg: Rgb(150, 104, 23), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Rgb(111, 143, 46), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Rgb(117, 137, 46), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 2, fg: Rgb(124, 130, 46), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Rgb(130, 124, 46), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 2, fg: Rgb(137, 117, 46), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Rgb(143, 111, 46), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Rgb(85, 170, 69), bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Rgb(91, 163, 69), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 3, fg: Rgb(98, 156, 69), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Rgb(104, 150, 69), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 3, fg: Rgb(111, 143, 69), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 3, fg: Rgb(117, 137, 69), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Rgb(85, 170, 92), bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Rgb(91, 163, 92), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: Rgb(98, 156, 92), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Rgb(104, 150, 92), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 4, fg: Rgb(111, 143, 92), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 4, fg: Rgb(117, 137, 92), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 4, fg: Rgb(124, 130, 92), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 4, fg: Rgb(130, 124, 92), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Rgb(98, 156, 115), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Rgb(104, 150, 115), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Rgb(111, 143, 115), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 5, fg: Rgb(117, 137, 115), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 5, fg: Rgb(124, 130, 115), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 5, fg: Rgb(130, 124, 115), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 5, fg: Rgb(137, 117, 115), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 5, fg: Rgb(143, 111, 115), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 5, fg: Rgb(150, 104, 115), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 5, fg: Rgb(156, 98, 115), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Rgb(98, 156, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Rgb(104, 150, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 6, fg: Rgb(111, 143, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: Rgb(117, 137, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 6, fg: Rgb(124, 130, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 6, fg: Rgb(130, 124, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 6, fg: Rgb(137, 117, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 6, fg: Rgb(143, 111, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 6, fg: Rgb(150, 104, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 6, fg: Rgb(156, 98, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 6, fg: Rgb(163, 91, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 6, fg: Rgb(170, 85, 139), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: Rgb(111, 143, 162), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Rgb(117, 137, 162), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 7, fg: Rgb(124, 130, 162), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 7, fg: Rgb(130, 124, 162), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 7, fg: Rgb(137, 117, 162), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 7, fg: Rgb(143, 111, 162), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 7, fg: Rgb(150, 104, 162), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 7, fg: Rgb(156, 98, 162), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 7, fg: Rgb(163, 91, 162), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 7, fg: Rgb(170, 85, 162), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Rgb(104, 150, 185), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Rgb(111, 143, 185), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 8, fg: Rgb(117, 137, 185), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 8, fg: Rgb(124, 130, 185), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 8, fg: Rgb(130, 124, 185), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 8, fg: Rgb(137, 117, 185), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 8, fg: Rgb(143, 111, 185), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 8, fg: Rgb(150, 104, 185), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 8, fg: Rgb(156, 98, 185), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 8, fg: Rgb(163, 91, 185), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 9, fg: Rgb(117, 137, 208), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 9, fg: Rgb(124, 130, 208), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 9, fg: Rgb(130, 124, 208), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 9, fg: Rgb(137, 117, 208), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 9, fg: Rgb(143, 111, 208), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 9, fg: Rgb(150, 104, 208), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 9, fg: Rgb(156, 98, 208), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 9, fg: Rgb(163, 91, 208), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 9, fg: Rgb(170, 85, 208), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
