crates/happyterminals-backend-ratatui/tests/snapshots/color_snapshots__cube_mono.snap
---
source: crates/happyterminals-backend-ratatui/tests/color_snapshots.rs
assertion_line: 143
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 12 },
    content: [
        "                                        ",
        "                                        ",
        "           ++++++++++++++++++           ",
        "          ++++++++++++++++++++          ",
        "          ++++++++++++++++++++          ",
        "          ++++++++++++++++++++          ",
        "           ++++++++++++++++++           ",
        "           ++++++++++++++++++           ",
        "           ++++++++++++++++++           ",
        "              ++++++++++++              ",
        "                ++++++++                ",
        "                  ++++                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
