crates/happyterminals-backend-ratatui/tests/snapshots/color_snapshots__cube_palette256.snap
---
source: crates/happyterminals-backend-ratatui/tests/color_snapshots.rs
assertion_line: 129
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 12 },
    content: [
        "                                        ",
        "                                        ",
        "           ++++++++++++++++++           ",
        "          ++++++++++++++++++++          ",
        "          ++++++++++++++++++++          ",
        "          ++++++++++++++++++++          ",
        "           ++++++++++++++++++           ",
        "           ++++++++++++++++++           ",
        "           ++++++++++++++++++           ",
        "              ++++++++++++              ",
        "                ++++++++                ",
        "                  ++++                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Indexed(70), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Indexed(64), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Indexed(3), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Indexed(94), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 2, fg: Indexed(130), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 3, fg: Indexed(71), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Indexed(65), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 3, fg: Indexed(101), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 3, fg: Indexed(95), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 3, fg: Indexed(131), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Indexed(71), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Indexed(65), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 4, fg: Indexed(101), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 4, fg: Indexed(95), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 4, fg: Indexed(131), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Indexed(71), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Indexed(65), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 5, fg: Indexed(95), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 5, fg: Indexed(131), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 6, fg: Indexed(72), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Indexed(66), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 6, fg: Indexed(96), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 6, fg: Indexed(132), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 7, fg: Indexed(73), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Indexed(67), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Indexed(103), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 7, fg: Indexed(97), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 7, fg: Indexed(133), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 8, fg: Indexed(73), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Indexed(67), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 8, fg: Indexed(103), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 8, fg: Indexed(97), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 8, fg: Indexed(133), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 9, fg: Indexed(74), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Indexed(68), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 9, fg: Indexed(104), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 9, fg: Indexed(98), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 9, fg: Indexed(134), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Indexed(68), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 10, fg: Indexed(104), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 10, fg: Indexed(98), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 11, fg: Indexed(105), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
